objects/Watcher__c.object
<CustomObject>
    <customHelpPage>General_Deal_Management</customHelpPage>
    <fields>
        <fullName>Actual_Finalised_Report_Date__c</fullName>
        <label>Actual Finalised Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Report_Date__c</fullName>
        <label>Actual Report Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Review_Date__c</fullName>
        <label>Actual Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_Valuation_Date__c</fullName>
        <label>Actual Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Actual</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Collateral_Monitoring__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Monitoring</label>
        <referenceTo>Collateral_Monitoring__c</referenceTo>
        <relationshipLabel>Watchers</relationshipLabel>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collateral_Valuation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Collateral Valuation</label>
        <referenceTo>Collateral_Valuation__c</referenceTo>
        <relationshipLabel>Watchers</relationshipLabel>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Days_in_Status__c</fullName>
        <formula>TODAY() - DATEVALUE( Status_Change_Stamp__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Deal</label>
        <referenceTo>advpm__Matter__c</referenceTo>
        <relationshipLabel>Watchers</relationshipLabel>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Valuation_Date__c</fullName>
        <label>Initial Valuation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Margin_Ratchet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Margin Ratchet</label>
        <referenceTo>Margin_Ratchet__c</referenceTo>
        <relationshipLabel>Watchers</relationshipLabel>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Notification_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Notification User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Report_Grading__c</fullName>
        <label>Report Grading</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Concern</fullName>
                </value>
                <value>
                    <fullName>Escalation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result__c</fullName>
        <label>Result</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Expectation Met</fullName>
                </value>
                <value>
                    <fullName>Expectation Not Met</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status_Change_Stamp__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Status Change Stamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Breached</fullName>
                </value>
                <value>
                    <fullName>Breached with Action</fullName>
                </value>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Report in progress</fullName>
                </value>
                <value>
                    <fullName>Review in progress</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Report Completed</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                    <isActive>false</isActive>
                    <label>Deferred</label>
                </value>
                <value>
                    <fullName>Due</fullName>
                    <isActive>false</isActive>
                    <label>Due</label>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                    <isActive>false</isActive>
                    <label>Overdue</label>
                </value>
                <value>
                    <fullName>Waived</fullName>
                    <isActive>false</isActive>
                    <label>Waived</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Created?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Task_Notification_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Task Notification User</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>advpm__Participant__c.advpm__Matter__c</field>
                <operation>equals</operation>
                <valueField>$Source.Deal__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>advpm__Participant__c</referenceTo>
        <relationshipLabel>Watchers</relationshipLabel>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Trigger__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Trigger</label>
        <referenceTo>Trigger__c</referenceTo>
        <relationshipLabel>Watchers</relationshipLabel>
        <relationshipName>Watchers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Valuation_Status__c</fullName>
        <label>Valuation Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Scheduled</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Valuation Completed</fullName>
                </value>
                <value>
                    <fullName>Report in progress</fullName>
                </value>
                <value>
                    <fullName>Review in progress</fullName>
                </value>
                <value>
                    <fullName>Review Completed</fullName>
                </value>
                <value>
                    <fullName>Report Completed</fullName>
                </value>
                <value>
                    <fullName>Breached</fullName>
                    <isActive>false</isActive>
                    <label>Breached</label>
                </value>
                <value>
                    <fullName>Breached with Action</fullName>
                    <isActive>false</isActive>
                    <label>Breached with Action</label>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                    <isActive>false</isActive>
                    <label>Deferred</label>
                </value>
                <value>
                    <fullName>Due</fullName>
                    <isActive>false</isActive>
                    <label>Due</label>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                    <isActive>false</isActive>
                    <label>Fulfilled</label>
                </value>
                <value>
                    <fullName>New</fullName>
                    <isActive>false</isActive>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                    <isActive>false</isActive>
                    <label>Overdue</label>
                </value>
                <value>
                    <fullName>Waived</fullName>
                    <isActive>false</isActive>
                    <label>Waived</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Watcher_Status__c</fullName>
        <label>Watcher Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Due</fullName>
                </value>
                <value>
                    <fullName>Overdue</fullName>
                </value>
                <value>
                    <fullName>Fulfilled</fullName>
                </value>
                <value>
                    <fullName>Waived</fullName>
                </value>
                <value>
                    <fullName>Deferred</fullName>
                </value>
                <value>
                    <fullName>Breached</fullName>
                </value>
                <value>
                    <fullName>Breached with Action</fullName>
                </value>
                <value>
                    <fullName>Breached Rectified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Watcher</label>
    <nameField>
        <displayFormat>WTH-{0}</displayFormat>
        <label>Watcher #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Watchers</pluralLabel>
    <recordTypes>
        <fullName>Collateral_Monitoring</fullName>
        <active>true</active>
        <label>Collateral Monitoring</label>
    </recordTypes>
    <recordTypes>
        <fullName>Collateral_Valuation</fullName>
        <active>true</active>
        <label>Collateral Valuation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Margin_Ratchet</fullName>
        <active>true</active>
        <label>Margin Ratchet</label>
    </recordTypes>
    <recordTypes>
        <fullName>Trigger</fullName>
        <active>true</active>
        <label>Trigger</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Specify_Monitoring_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
ISPICKVAL(Result__c ,&quot;Expectation Not Met&quot;),
Comments__c == NULL
)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have added a comment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Specify_Valuation_Comment</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(
ISPICKVAL( Report_Grading__c ,&apos;Concern&apos;) , ISPICKVAL( Report_Grading__c ,&apos;Escalation&apos;)),  Comments__c == NULL)</errorConditionFormula>
        <errorDisplayField>Comments__c</errorDisplayField>
        <errorMessage>Please ensure that you have added a comment.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>System_Generated_Status</fullName>
        <active>true</active>
        <errorConditionFormula>IF(ISCHANGED(Watcher_Status__c) == TRUE &amp;&amp; (ISPICKVAL(Watcher_Status__c,&apos;New&apos;) || ISPICKVAL(Watcher_Status__c,&apos;Due&apos;) || ISPICKVAL(Watcher_Status__c,&apos;Overdue&apos;)), True, False)</errorConditionFormula>
        <errorDisplayField>Watcher_Status__c</errorDisplayField>
        <errorMessage>You are not allowed to change the Watcher Status to a System Generated Status (New, Due, Overdue)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Task_Notification_User</fullName>
        <active>true</active>
        <errorConditionFormula>ISPICKVAL( Watcher_Status__c , &quot;Breached with Action&quot;) &amp;&amp;  ISBLANK( Task_Notification_User__c ) &amp;&amp;  RecordType.DeveloperName = &quot;Trigger&quot;</errorConditionFormula>
        <errorDisplayField>Task_Notification_User__c</errorDisplayField>
        <errorMessage>Breached With Action! Please select a Participant to notify</errorMessage>
    </validationRules>
</CustomObject>